--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "style-loader": "^1.1.2",
     "sugarss": "^2.0.0",
     "ts-loader": "^6.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.7.4",
     "url-loader": "^3.0.0",
     "webpack": "^4.41.5",
