--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "typeRoots": ["./node_modules/@types", "./src/types"],
-        "jsx": "react"
-    }
+        "jsx": "react",
+        "baseUrl": "./",
+        "paths": {
+            "@free-backend/*": ["src/*"]
+        }
+    },
+    "include": ["src"]
 }
