--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "removeComments": true,
-        "target": "ES2016",
+        "target": "es2016",
         "module": "CommonJS",
         "moduleResolution": "node",
         "esModuleInterop": true,
@@ -10,8 +10,8 @@
         "jsx": "react",
         "baseUrl": "./",
         "paths": {
-            "@free-backend/*": ["src/*"]
+            "free-backend/*": ["src/*"]
         }
     },
-    "include": ["src"]
+    "include": ["."]
 }
