--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^3.4.1",
     "html-loader": "^0.5.5",
     "http-server": "^0.12.0",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
