--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^9.7.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.1",
+    "expose-loader": "^0.7.5",
     "html-loader": "^0.5.5",
     "http-server": "^0.12.0",
     "less-loader": "^5.0.0",
