--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "rm -rf ./dist/ && webpack",
-    "demo": "http-server ."
+    "demo": "http-server .",
+    "dll": "webpack --config webpack.dll.js"
   },
   "repository": {
     "type": "git",
