--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "expose-loader": "^0.7.5",
     "html-loader": "^0.5.5",
     "http-server": "^0.12.0",
+    "koa": "^2.11.0",
+    "koa-static": "^5.0.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
