--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "rm -rf ./dist/ && webpack",
-    "demo": "http-server .",
+    "demo": "node demo/app.js",
     "dll": "rm -rf ./dll/ && webpack --config webpack.dll.js"
   },
   "repository": {
